# omop-mcp

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ADDITIONAL_BACKENDS_COMPLETE.md  DEVELOPMENT.md  DEV_TOOLING_COMPLETE.md  EXPORT_TOOLS_COMPLETE.md  FINAL_VERIFICATION_COMPLETE.md  INTEGRATION_TESTS_COMPLETE.md  MISSING_ITEMS_ANALYSIS.md  Makefile  Makefile.old  OPTIONAL_ENHANCEMENTS_COMPLETE.md  PYDANTIC_AI_AGENTS_COMPLETE.md  PYLANCE_CONFIG_FIX.md  PYLANCE_FIX.md  README.md  ROCK_SOLID_COMPLETE.md  SECURITY.md  SESSION4_ADDITIONAL_BACKENDS_COMPLETE.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SQLGEN_EXTRACTION_COMPLETE.md  WEEK1_ACTUAL_VS_PLANNED.md  WEEK1_COMPLETE.md  WEEK2_PROGRESS.md  env.example  pyproject.toml  pyrightconfig.json
.github/workflows/: quality.yml
agents/: docs.md
agents/cd/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  find_concepts.py  run_discovery.sh  tools.py
agents/qb/: README.md  SCHEMA_AWARE_SQL_FIX.md  STAGE3_COMPLETE.md  TABLE_DISCOVERY_FIX.md  __init__.py  create_bigquery_sql.py  generated_cohort_query.sql  run_query_builder.sh  sql_generation_result.json  tools.py
docs/: configuration.md  execution-caching.md  sql-validation.md
docs/api/: tools.md
docs/integrations/: claude-desktop.md  generic-mcp-client.md  librechat-ollama.md
plan/: plan.md
src/omop_mcp/: __init__.py  auth.py  config.py  models.py  prompts.py  resources.py  server.py
src/omop_mcp/agents/: README.md  __init__.py  concept_agent.py  sql_agent.py
src/omop_mcp/backends/: __init__.py  base.py  bigquery.py  dialect.py  duckdb.py  registry.py  snowflake.py
src/omop_mcp/tools/: __init__.py  athena.py  export.py  query.py  schema.py  sql_validator.py  sqlgen.py
tests/: conftest.py  test_agents.py  test_athena.py  test_auth.py  test_backends.py  test_bigquery_auth.py  test_config.py  test_dialect.py  test_export.py  test_integration.py  test_models.py  test_prompts.py  test_query_security.py  test_resources.py  test_schema.py  test_sql_validator.py  test_sqlgen.py
